# fastjsonl

./: .gitignore  Cargo.toml  LICENSE-APACHE  Makefile  README.md  benchmark.py  benchmark_full.py  example-data.jsonl  example-schema.json  example-schema2.json  pyproject.toml  test.py
.github/: dependabot.yml
python/fastjsonl/: __init__.py
rust/: Cargo.toml
rust/src/: lib.rs
src/: _olldd.rs  lib.rs  parser.rs
src/fastjsonl/: __init__.py
tests/: test_fastjsonl.py
