[package]
name = "fastjsonl"
version = "0.1.0"
edition = "2024"

[lib]
name = "fastjsonl"
crate-type = ["cdylib"]

[dependencies]
arrow-array = "56.2.0"
jsonschema = "0.33.0"
libc = "0.2.177"
pyo3 = { version = "0.26", features = ["extension-module"] }
pyo3-arrow = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
