[project]
name = "fastjsonl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Wilhelm Ågren", email = "wilhelm@firelink.sh" },
]
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

