[project]
name = "fastjsonl"
dynamic = ["version"]
description = "Blazingly fast jsonl parser and validator."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Wilhelm Ågren", email = "wilhelm@firelink.sh" },
]
dependencies = [
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "fastjsonl"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "jsonschema>=4.25.1",
    "matplotlib>=3.10.7",
    "maturin>=1.9.6",
    "pytest>=8.4.2",
]

